--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ streamlit-mic-recorder==0.0.6
 speechrecognition==3.8.1
 gTTS==2.3.1
 playsound==1.2.2  # (Optional, if you still need it for local use)
+times
 ipinfo==3.0.0
+altair==4.0.1 #For streamlit-mic-recorder
